--- a/image/templates/image/home.html
+++ b/image/templates/image/home.html
@@ -1,23 +1,49 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Canopus Image Processing Playground</title>
+    <link rel="stylesheet" href="{% static 'image/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'image/css/style.css' %}">
+
+    <script type="text/javascript" src="{% static 'image/js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'image/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-    <div>
-       <!-- {% if images %}
+<div class="container">
+    {% comment %}
+        <!-- {% if images %}
             <form action="/band/delete-folder/" method="post">
             {% csrf_token %}
             <input type="submit" value="Delete Images"/>
             </form>
         {% else %} -->
-            <form action="/canopus/return-weights/" method="post">
-                {% csrf_token %}
-                <input type="text" name="input1" />
-                <input type="text" name="input2" />
-                <input type="submit" value="Download Images"/>
-            </form>
+        {% endcomment %}
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="card topForm">
+                <div class="card-body">
+                    <div class="card-title text-center"><h3>Enter Image to Search</h3></div>
+                    <br>
+                    <form class="" action="/canopus/return-weights/" method="post">
+                        {% csrf_token %}
+                        <div class="form-group row">
+                            <input type="text" id="input1" name="input1" class="form-control" placeholder="Input 1" required/>
+                        </div>
+                        <div class="form-group row">
+                            <input type="text" id="input2" name="input2" class="form-control" placeholder="Input 2" required/>
+                        </div>
+                        <div class="form-group row">
+                            <button class="btn" type="submit">Download Images</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
 </body>
 </html>
