Read the commit description before proceeding
Need to make a new base html to keep navbar there and then extend others - Suraksha

FileUpload Location is canopus/media/tmp - Add delete method somewhere to delete this after done

Other functionalities to be handled - Prateek

Any further designs needed let me know - Soham

--- a/image/static/image/css/style.css
+++ b/image/static/image/css/style.css
@@ -1,5 +1,4 @@
 body {
-    padding-top: 2%;
     background-color: #3E5050;
 }
 
@@ -33,4 +32,44 @@ h3 {
     background-color: #28AB5D;
     border-radius: 2px;
     box-shadow: 1px 1px 1px rgba(39, 39, 39, 0.56), -1px 1px rgba(39, 39, 39, 0.56), 0 2px 2px 2px rgba(39, 39, 39, 0.56);
+}
+
+#nav-bar {
+    background-color: #28AB5D;
+    height: 50px;
+    color: #3E5050;
+}
+
+#nav-bar a {
+    color: whitesmoke;
+    font-size: 1.1em;
+}
+
+#nav-bar a:hover {
+    color: #3E5050;
+}
+
+.brand-font a {
+    margin-left: 5em;
+}
+
+#ntopnav {
+    margin-left: 5em;
+}
+
+#ntopnav a {
+    margin: 0 5em;
+}
+
+a:not([href]):not([tabindex]) {
+    color: white!important;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #ba0f00;
+}
+
+.imgUpload:hover {
+    cursor: pointer;
 }
