--- a/image/templates/image/deepdreams.html
+++ b/image/templates/image/deepdreams.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canopus Image Processing Playground</title>
+    <title>Deep Dreams</title>
     <link rel="stylesheet" href="{% static 'image/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'image/css/style.css' %}">
 
@@ -36,7 +36,7 @@
                             Cancer</a>
                     </div>
                 </li>-->
-                <li><a href="/canopus/style-trans/">Style Transfer</a></li>
+                <li><a href="/canopus/style-trans/" id="about-button">Style Transfer</a></li>
             </ul>
         </div>
     </nav>
@@ -56,16 +56,13 @@
                 <div class="card-body">
                     <div class="card-title text-center"><h3>Enter Image to Search</h3></div>
                     <br>
-                    <form class="" action="/canopus/return-weights/" method="post">
+                    <form class="" action="/canopus/imageUpload/" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group row">
-                            <input type="text" id="input1" name="input1" class="form-control" placeholder="Input 1" required/>
+                            <input class="imgUpload" type="file" name="image"/>
                         </div>
                         <div class="form-group row">
-                            <input type="text" id="input2" name="input2" class="form-control" placeholder="Input 2" required/>
-                        </div>
-                        <div class="form-group row">
-                            <button class="btn" type="submit">Download Images</button>
+                            <button class="btn" type="submit">Upload Image</button>
                         </div>
                     </form>
                 </div>
