--- a/image/static/image/css/style.css
+++ b/image/static/image/css/style.css
@@ -43,8 +43,8 @@ h3 {
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
-    height: 500px;
+    width: 60em;
+    height: 28em;
     padding: 5% 5%;
     background-color: rgba(0, 0, 0, 0.41);
     border-radius: 2px;
